<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF6F5">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="306dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExp"
        app:layout_constraintVertical_bias="0.5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/C" />

            <Button
                android:id="@+id/btnSigno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/Signo"
                app:backgroundTint="@color/gray" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/Div"
                app:backgroundTint="@color/gray" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/Mul"
                app:backgroundTint="@color/gray" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N7"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N8"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N9"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btnRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/Res"
                app:backgroundTint="@color/gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N4"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N5"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/N6"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/btnSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="@string/Sum"
                app:backgroundTint="@color/gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/btn1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/editbox_background"
                                android:text="@string/N1"
                                app:backgroundTint="@color/orange" />

                            <Button
                                android:id="@+id/btn2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/editbox_background"
                                android:text="@string/N2"
                                app:backgroundTint="@color/orange" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/btn0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_span="2"
                                android:background="@android:drawable/editbox_background"
                                android:text="@string/N0"
                                app:backgroundTint="@color/orange" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/btn3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/editbox_background"
                                android:text="@string/N3"
                                app:backgroundTint="@color/orange" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                android:id="@+id/btnComa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/editbox_background"
                                android:text="@string/Coma"
                                app:backgroundTint="@color/orange" />
                        </TableRow>
                    </TableLayout>

                    <Button
                        android:id="@+id/btnIgual"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@android:drawable/editbox_background"
                        android:onClick="onClick"
                        android:text="@string/Igual"
                        app:backgroundTint="@color/teal" />

                </TableRow>
            </TableLayout>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/txtExp"
        android:layout_width="302dp"
        android:layout_height="108dp"
        android:background="@drawable/marco_texto"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:flow_verticalAlign="baseline"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>